--- a/gradle/download-mps.gradle
+++ b/gradle/download-mps.gradle
@@ -20,8 +20,9 @@ def jbrMappings = [
         "2023.3": "17.0.12-b1087.25",
         "2024.1": "17.0.12-b1207.37",
         "2024.2": "17.0.11-b1312.2",
-        "2024.3": "21.0.6-b631.39",
-        "2025.1": "21.0.6-b895.97" ]
+        "2024.3": "21.0.6-b631.52",
+        "2025.1": "21.0.7-b895.130",
+        "2025.2": "21.0.7-b1020.35" ]
 
 
 if (!project.hasProperty("mpsVersion")) {
@@ -243,11 +244,30 @@ private void addLocalPluginsPathToVmOptions(String targetFolderName) {
 
 private def moveNestedPluginsUp(def outputDependenciesDirectory) {
     def movedNestedPluginsCounters = [:]
+
+    // Regard nested plugins with META-INF/plugin.xml
     fileTree(dir: outputDependenciesDirectory, includes: ['*/*/META-INF/plugin.xml']).each { nestedPluginXml ->
         def nestedPluginDir = nestedPluginXml.parentFile.parentFile
         def bundleDirectory = nestedPluginDir.parentFile
         Files.move(nestedPluginDir.toPath(), outputDependenciesDirectory.toPath().resolve(nestedPluginDir.name))
         movedNestedPluginsCounters.put(bundleDirectory.name, movedNestedPluginsCounters.get(bundleDirectory.name, 0) + 1)
+    }
+
+    // Regard nested plugins with alternative structure (e.g. languages and lib directories)
+    outputDependenciesDirectory.listFiles().each { bundleDir ->
+        if (bundleDir.isDirectory()) {
+            bundleDir.listFiles().each { possiblePluginDir ->
+                if (possiblePluginDir.isDirectory()) {
+                    def hasLanguagesDir = new File(possiblePluginDir, "languages").exists()
+                    def hasLibDir = new File(possiblePluginDir, "lib").exists()
+
+                    if (hasLanguagesDir && hasLibDir) {
+                        Files.move(possiblePluginDir.toPath(), outputDependenciesDirectory.toPath().resolve(possiblePluginDir.name))
+                        movedNestedPluginsCounters.put(bundleDir.name, movedNestedPluginsCounters.get(bundleDir.name, 0) + 1)
+                    }
+                }
+            }
+        }
     }
 
     movedNestedPluginsCounters.each { bundleName, count ->
